# dyn-nsupdate

./: CMakeLists.txt  COPYING  LICENSE-BSD  README  README.md  README.rst  apache-ns.example.com.conf  checkip  client.py  dyn-ns-client.conf.dist  dyn-nsupdate.conf.dist  dyn-nsupdate.cpp  update  update.py
client-scripts/: dyn-ns-client
nsupd-wrapper/: dyn-nsupdate.cpp
server-scripts/: checkip  update
